[package]
name = "free-tank-rs"
version = "0.1.0"
authors = [
    "Calvin Maree <cloudcalvin@me.com>",
]

keywords = ["monad", "free-monad", "trampoline", "piston", "conrod", "monoid"]
description = "Free Monad Tank Game"
license = "MIT"
readme = "README.md"


[dependencies]
conrod = 0.31.1
operational = "0.0.5"
free = "0.0.1"
tailrec = "0.0.4"
mdo = "*"
# [lib]

# name = "conrod"
# path = "./src/lib.rs"


# [dependencies]
# daggy = "0.4.0"
# pistoncore-input = "0.8.0"
# piston2d-graphics = "0.13.0"
# num = "0.1.27"
# rand = "0.3.12"
# time = "0.1.34"
# vecmath = "0.2.0"
#
#
# [dev-dependencies]
# find_folder = "0.3.0"
# gfx = "0.8.1"
# piston-viewport = "0.2.0"
# piston_window = "0.33.0"
# piston2d-gfx_graphics = "0.17.0"
# piston2d-opengl_graphics = "0.22.0"
# pistoncore-glutin_window = "0.20.0"
# piston = "0.16.0"
